--- a/src/components/morecules/featured/featured.scss
+++ b/src/components/morecules/featured/featured.scss
@@ -1,8 +1,25 @@
 .featured {
-  flex: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid #ccc;
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-  padding: 10px;
+  padding: 40px;
+
+  .box {
+    flex-basis: calc(45% - 5px);
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out;
+    padding: 10px;
+
+    &:hover {
+      box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
+    }
+  }
 
   .top {
     display: flex;
@@ -17,7 +34,7 @@
   }
 
   .bottom {
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,8 +42,8 @@
     gap: 15px;
 
     .featuredChart {
-      width: 100px;
-      height: 100px;
+      width: 50px;
+      height: 50px;
     }
 
     .title {
