--- a/src/components/morecules/navbar/navbar.scss
+++ b/src/components/morecules/navbar/navbar.scss
@@ -37,8 +37,32 @@
       .item {
         display: flex;
         align-items: center;
-        margin-right: 20px;
+        margin-right: 30px;
         position: relative;
+
+        .dropdown {
+          position: absolute;
+          top: 2.8rem;
+          right: -2.5px;
+          width: 120px;
+          padding: 10px;
+          border-radius: 15px;
+          background-color: white;
+          border: 1px solid gray;
+        }
+
+        .dropdown ::before {
+          content: '';
+          position: absolute;
+          top: -0.7rem;
+          right: 1.0rem;
+          width: 20px;
+          height: 20px;
+          transform: rotate(45deg);
+          background-color: white;
+          border-left: 1px solid gray;
+          border-top: 1px solid gray;
+        }
 
         .icon {
           font-size: 20px;
@@ -48,6 +72,7 @@
           width: 30px;
           height: 30px;
           border-radius: 50%;
+          margin-right: 10px;
         }
 
         .counter {
