--- a/src/screen/Home/home.scss
+++ b/src/screen/Home/home.scss
@@ -29,3 +29,11 @@
         }
     }
 }
+
+.loading-screen{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
