--- a/src/screen/Payment/payment.scss
+++ b/src/screen/Payment/payment.scss
@@ -1,239 +1,7 @@
-.header {
-    padding-top: 100px;
-    font-size: large;
-    color: #000;
-    text-align: center;
-    // background-image: url('../../../public/images/background4.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.navbarPayment {
-    background-color: #6439ff;
-    height: 75px;
-
-    .back-button {
-        display: inline-block;
-        margin-left: 30px;
-        margin-top: 25px;
-    }
-}
-
-.body {
-    height: auto;
-    // background-image: url('../../../public/images/background4.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    .dangKy {
-
-        margin-bottom: 10px;
-
-        .sale {
-
-            height: 30vh;
-            width: 100%;
-
-            .chonGoi {
-
-                height: 20vh;
-                width: 25%;
-                background-color: #f2f2f2;
-                border-radius: 30px;
-                border: 1px solid #bbbaba;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                cursor: pointer;
-
-                .title {
-                    font-weight: 500;
-                }
-
-                .price {
-                    width: 60%;
-                    text-align: center;
-
-                    span {
-                        color: black;
-                        font-size: 22px;
-                        font-weight: 700;
-                    }
-
-                    p {
-                        color: #555;
-                        font-size: 14px;
-                    }
-
-                    .btn-sale {
-                        width: 100%;
-                        padding: 5px 0;
-                        margin-top: 5px;
-                        color: #fff;
-                        background-color: #4dd69b;
-                        border-radius: 3px;
-                        font-weight: 600;
-                    }
-
-                    .quantity {
-
-                        margin-top: 15px;
-
-                        p {
-                            margin-top: 10px;
-                        }
-
-                        input {
-                            width: 40%;
-                            padding: 5px;
-                            border: 1px solid #4dd69b;
-                            border-radius: 5px;
-                        }
-                    }
-                }
-            }
-        }
-
-        .btn-signup {
-            width: 150px;
-            padding: 10px 0;
-            border-radius: 20px;
-            font-size: 18px;
-            margin-bottom: 10px;
-            background-color: #4dd69b;
-            color: white;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-
-            /* Thêm hiệu ứng hover */
-            &:hover {
-                background-color: #5a2dfd;
-            }
-        }
-    }
-
-    .description {
-
-
-        margin-top: 350px;
-        height: 11vh;
-        width: 100%;
-        background-color: #6439ff;
-
-        .descriptionTop {
-
-
-            height: 100%;
-            width: 90%;
-            padding: 20px;
-            font-size: 20px;
-            border-top: 2px solid #555;
-        }
-
-        .descriptionBot {
-            text-align: start;
-            height: 50%;
-            width: 90%;
-            color: gray;
-            font-size: 14px;
-            line-height: 20px;
-            border-top: 2px dashed #999;
-
-            p {
-                margin-top: 10px;
-                margin-left: 50px;
-            }
-        }
-    }
-
-    .tabpane {
-        height: 50vh;
-        border-top: 2px solid #555;
-        background-color: white;
-    }
-}
-
-.paymentQRCode {
-    width: 400px;
-    height: auto;
-}
-
-.card {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.totalPrice {
-    margin: 10px 0;
-    color: #ff8a00;
-    font-size: 20px;
-}
-
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.payment{
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
-    z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* Màu xám với độ mờ 50% */
-}
-
-.modal-container {
-    display: grid;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 20px;
-    width: 800px;
-    height: 600px;
-}
-
-.modal-content {
-    display: flex;
-
-    .table-header {
-        width: 100px;
-    }
-}
-
-.modal-footer {
-    display: flex;
-    justify-content: flex-end;
     align-items: center;
-    margin-top: 20px;
-}
-
-
-.qr-code {
-    margin-right: 20px;
-    background-size: cover;
-    background-position: center;
-    width: 200px;
-    height: 200px;
-}
-
-.btn-close {
-    background-color: #ddd;
-    color: #333;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    margin-right: 10px;
-    cursor: pointer;
-}
-
-.btn-confirm {
-    background-color: #4dd69b;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
 }
